@@ -59,7 +59,7 @@ class ListRealmRolesIntegrationTest extends RolesMocks {
         new ErrorResponseKeycloakDto().errorMessage("Some error message");
 
     WireMock.stubFor(
-        WireMock.get(WireMock.urlMatching(String.format("/admin/realms/%s/roles", realm)))
+        WireMock.get(WireMock.urlMatching("/admin/realms/%s/roles".formatted(realm)))
             .willReturn(
                 WireMock.aResponse()
                     .withHeader("Content-Type", MediaType.APPLICATION_JSON_VALUE)
