@@ -162,7 +162,7 @@ class ListUsersIntegrationTest extends BaseIntegrationTest {
 
   protected void mockGetUserCount(Integer userCount) {
     WireMock.stubFor(
-        WireMock.get(WireMock.urlMatching(String.format("/admin/realms/%s/users/count", realm)))
+        WireMock.get(WireMock.urlMatching("/admin/realms/%s/users/count".formatted(realm)))
             .willReturn(
                 WireMock.aResponse()
                     .withHeader("Content-Type", MediaType.APPLICATION_JSON_VALUE)
@@ -174,7 +174,7 @@ class ListUsersIntegrationTest extends BaseIntegrationTest {
     WireMock.stubFor(
         WireMock.get(
                 WireMock.urlMatching(
-                    String.format("/admin/realms/%s/users\\?first=%s&max=%s", realm, first, max)))
+                    "/admin/realms/%s/users\\?first=%s&max=%s".formatted(realm, first, max)))
             .willReturn(
                 WireMock.aResponse()
                     .withHeader("Content-Type", MediaType.APPLICATION_JSON_VALUE)
@@ -183,7 +183,7 @@ class ListUsersIntegrationTest extends BaseIntegrationTest {
 
   protected void mockListRealmRoles(List<RoleKeycloakDto> roles) throws Exception {
     WireMock.stubFor(
-        WireMock.get(WireMock.urlMatching(String.format("/admin/realms/%s/roles", realm)))
+        WireMock.get(WireMock.urlMatching("/admin/realms/%s/roles".formatted(realm)))
             .willReturn(
                 WireMock.aResponse()
                     .withHeader("Content-Type", MediaType.APPLICATION_JSON_VALUE)
@@ -194,8 +194,7 @@ class ListUsersIntegrationTest extends BaseIntegrationTest {
       throws Exception {
     WireMock.stubFor(
         WireMock.get(
-                WireMock.urlMatching(
-                    String.format("/admin/realms/%s/roles/%s/users", realm, roleName)))
+                WireMock.urlMatching("/admin/realms/%s/roles/%s/users".formatted(realm, roleName)))
             .willReturn(
                 WireMock.aResponse()
                     .withHeader("Content-Type", MediaType.APPLICATION_JSON_VALUE)
@@ -225,7 +224,7 @@ class ListUsersIntegrationTest extends BaseIntegrationTest {
     WireMock.stubFor(
         WireMock.get(
                 WireMock.urlMatching(
-                    String.format("/admin/realms/%s/users\\?first=%s&max=%s", realm, first, max)))
+                    "/admin/realms/%s/users\\?first=%s&max=%s".formatted(realm, first, max)))
             .willReturn(
                 WireMock.aResponse()
                     .withHeader("Content-Type", MediaType.APPLICATION_JSON_VALUE)
